ปรับธีม หน้า สินค้าคงเหลือแยกตามรายสินค้า

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,27 @@
   font-family: 'Kanit';  
 }
 
+.breadcrumb-item {
+  font-family: 'Kanit'; 
+ 
+}
+
 .bg-green {
   background-color: #D6FAD2; 
+}
+
+.btn-primary { 
+  background-color:#54BA4A;
+}
+
+
+.pos_title { 
+  color : #FFA63B;
+}
+
+.pos_table thead tr th {  
+  color : green;
+  border-bottom: 2px solid #6EC566;
 }
 
     </style>
