--- a/src/index.html
+++ b/src/index.html
@@ -41,16 +41,17 @@
   background-color:#54BA4A;
 }
 
-
 .pos_title { 
-  color : #FFA63B;
+  color : #F26B38;
 }
 
 .pos_table thead tr th {  
-  color : green;
-  border-bottom: 2px solid #6EC566;
+  color : #2F9599;
+  border-bottom: 2px solid #2F9599;
 }
 
+
+  
     </style>
   
   </head>
