ปรับปรุงหน้า Stock-In เพิ่มการตรวจสอบ ตอน Add Item

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,10 @@
   font-family: 'Roboto'; 
 }
 
+.kanit {
+  font-family: 'Kanit'; 
+}
+
 .bg-green {
   background-color: #D6FAD2; 
 }
@@ -49,6 +53,19 @@
 
 .pos_title { 
   color : #F26B38;
+}
+
+.tx_danger { 
+  color : #f23838;
+}
+
+.msg_error { 
+  color : #f23838;
+  font-family: 'Kanit'; 
+}
+
+.modal-header {
+  font-family: 'Kanit'; 
 }
 
 .pos_table thead tr th {  
