--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Cuba - Premium Admin Template</title>
+    <title>POS D2D -ระบบขายสินค้าหน้าร้านออนไลน์ </title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
@@ -19,6 +19,11 @@
 
 .page-title {
   color : #2F9599;
+  font-family: 'Kanit';  
+}
+
+.modal-title {
+  color : #F26B38;
   font-family: 'Kanit';  
 }
 
@@ -73,6 +78,13 @@
 .msg_error { 
   color : #f23838;
   font-family: 'Kanit'; 
+  font-size: 14px;
+}
+
+.msg_success { 
+  color : #54BA4A;
+  font-family: 'Kanit'; 
+  font-size: 14px;
 }
 
 .modal-header {
@@ -84,8 +96,29 @@
   border-bottom: 2px solid #2F9599;
 }
 
+.item_remove{
+  cursor: pointer;
+}
 
+.table_item_size_md{
+  font-size: 14px;
+}
+
+.table_item_size_sm{
+  font-size: 12px;
+}
+
+.center_div{
+    position:absolute;
+    z-index:99;
+    width:100%;
+  } 
   
+.slip_th{
+  border-top: 1px dashed gray;
+  border-bottom: 1px dashed gray;
+}
+
     </style>
   
   </head>
